<resources>
    <string name="app_name">HealthMonitor</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="notregistered">Still don\'t have an account?</string>
    <string name="healthmonitor">Health Monitor</string>
    <string name="healthrecords">Health Records</string>
    <string name="activities">Activities</string>
    <string name="monitor">Health Monitor</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string-array name="activities">
        <item>Jogging</item>
        <item>Cycling</item>
        <item>Football</item>
        <item>Attending a course</item>
        <item>Going to cinema</item>
        <item>Listenin to music</item>
        <item>Eating</item>
        <item>Sleeping</item>
    </string-array>
</resources>
