<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esdonmez.esd.healthmonitor.Views.RecordActivityView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:background="@color/barSelected">
            </RelativeLayout>

            <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="#fff"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:id="@+id/timer"
                android:countDown="false"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Activity : "
                android:layout_marginLeft="20dp"
                android:layout_weight="3"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/activities"
                    android:background="@null"
                    android:popupBackground="@drawable/spinner_background"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrow"
                    android:layout_alignRight="@+id/spinner"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#e04f5f"
                android:id="@+id/startButton"
                android:layout_marginRight="5dp"
                android:layout_centerInParent="true"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#e04f5f"
                android:id="@+id/stopButton"
                android:layout_marginLeft="5dp"
                android:layout_centerInParent="true"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
